自動PRテスト

--- a/.github/git-pr-release.erb
+++ b/.github/git-pr-release.erb
@@ -11,3 +11,9 @@ stg確認はしましたか？
     <%= check_box_tag :pr.pr.number %>
     <%= label_tag :pr.pr.number "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
 <% end -%>
+
+stg確認はしましたか？
+<% pull_requests.each do |pr| -%>
+    <%= check_box_tag :pr.pr.number %>
+    <%= label_tag :pr.pr.number "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
+<% end -%>
