--- a/.github/git-pr-release.erb
+++ b/.github/git-pr-release.erb
@@ -5,3 +5,5 @@ PR_url： <%= "##{release_pull_request.pr.number}" %>
 <% pull_requests.each do |pr| -%>
 <%= "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
 <% end -%>
+
+stg確認しました？
