自動PRテスト

--- a/.github/git-pr-release.erb
+++ b/.github/git-pr-release.erb
@@ -6,4 +6,8 @@ PR_url： <%= "##{release_pull_request.pr.number}" %>
 <%= "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
 <% end -%>
 
-stg確認しました？
+stg確認はしましたか？
+<% pull_requests.each do |pr| -%>
+    <%= check_box_tag :pr.pr.number %>
+    <%= label_tag :pr.pr.number "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
+<% end -%>
