--- a/.github/git-pr-release.erb
+++ b/.github/git-pr-release.erb
@@ -8,5 +8,6 @@ PR_url： <%= "##{release_pull_request.pr.number}" %>
 
 stg確認はしましたか？
 <% pull_requests.each do |pr| -%>
-  <%= check_box_tag "#{pr.pr.number}", "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}", checked = false, :id => "#{pr.pr.number}" %>
+テスト
+#   <%= check_box_tag "#{pr.pr.number}", "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}", checked = false, :id => "#{pr.pr.number}" %>
 <% end -%>
