--- a/.github/git-pr-release.erb
+++ b/.github/git-pr-release.erb
@@ -8,5 +8,6 @@ PR_url： <%= "##{release_pull_request.pr.number}" %>
 
 stg確認はしましたか？
 <% pull_requests.each do |pr| -%>
+  <%= check_box_tag :sample %>
   <%= "##{pr.pr.number} #{pr.pr.title} @#{pr.pr.user.login}" %>
 <% end -%>
